--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
